# blackops.github.io

./: .env  .gitignore  4.11.0.86  LICENSE.md  README.md  app.py  blackboard.py  blackops_data.db  blackops_local.db  cloud_store.db  clusterops.db  config.json  database.py  dominio.txt  executar_blackops.ps1  executar_cyberpainel.ps1  executar_graficodns.ps1  executar_paineldns.ps1  local_backup.db  log_interacoes.txt  log_segurança.json  mkdocs.yml  modelo_iris.joblib  nodemcu.py  nodemcu_interface.py  oauth.py  package-lock.json  package.json  pom.xml  pyproject.toml  requirements.txt  rules.json  runner-setup.ps1  secrets.toml  start.ps1  users.db
actions-runner/: .credentials  .credentials_rsaparams  .runner
auth/: auditoria.py  blackboard.py  blackops.py  oauth.py
blackops/: BlackOpsAPIClient.java  blackops.py  blackops_api.py
cloudops/: ARKitView.swift  ARKitViewManager.m  ARKitViewManager.swift  App.js  Info.plist  ThreeBackground.js  app.json  babel.config.js  package-lock.json  package.json
config/: azimov_firewall.py  firewall.py  firewall_inspector.py  firewall_relay_controller.py  firewall_widget.py  gerenciador_modelo.py  settings.py
cyberops/: CyberpunkServer.java  CyberpunkTerminal.ps1  client_powershell.ps1  tcp_server_streamlit.py
dados_github/: dados_usuario.json
dashboard/: github_dashboard.py  test_github_dashboard.py
database/: db.py  java_db.java
docs/: reference.md  ui.md
firmware/: platformio.ini
framework/: abrir_painel.ps1  app.py  cyberops.ps1  firewall.py  painel_tecnologico.py  widget_app.py
logs/: log_segurança.json
(+62 files in other folders)
